TERP proj/force-app/main/default/objects/Monthly_Stats__c/Monthly_Stats__c.object-meta.xml
<CustomObject>
    <label>Monthly Stats</label>
    <nameField>
        <label>Monthly Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>