TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FollowUps__c.field-meta.xml
<CustomField>
    <fullName>FollowUps__c</fullName>
    <label>No. of Follow Ups</label>
    <summarizedField>Weekly_Stats__c.FollowUps__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>