TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FollowupsBounced__c.field-meta.xml
<CustomField>
    <fullName>FollowupsBounced__c</fullName>
    <label>Followups Bounced</label>
    <summarizedField>Weekly_Stats__c.FollowupsBounced__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>