TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FollowupsClicked__c.field-meta.xml
<CustomField>
    <fullName>FollowupsClicked__c</fullName>
    <label>Followups Clicked</label>
    <summarizedField>Weekly_Stats__c.FollowupsClicked__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>