TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FollowupsNegativeResponse__c.field-meta.xml
<CustomField>
    <fullName>FollowupsNegativeResponse__c</fullName>
    <label>Followups Negative Response</label>
    <summarizedField>Weekly_Stats__c.FollowupsNegativeResponse__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>