TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FollowupsOpened__c.field-meta.xml
<CustomField>
    <fullName>FollowupsOpened__c</fullName>
    <label>Followups Opened</label>
    <summarizedField>Weekly_Stats__c.FollowupsOpened__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>