TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FollowupsPositiveResponse__c.field-meta.xml
<CustomField>
    <fullName>FollowupsPositiveResponse__c</fullName>
    <label>Followups Positive Response</label>
    <summarizedField>Weekly_Stats__c.FollowupsPositiveResponse__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>