TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FollowupsUnsubscribed__c.field-meta.xml
<CustomField>
    <fullName>FollowupsUnsubscribed__c</fullName>
    <label>Followups Unsubscribed</label>
    <summarizedField>Weekly_Stats__c.FollowupsUnsubscribed__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>