TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FollowupswarmResponse__c.field-meta.xml
<CustomField>
    <fullName>FollowupswarmResponse__c</fullName>
    <label>Followups warm Response</label>
    <summarizedField>Weekly_Stats__c.FollowupswarmResponse__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>