TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FreshBounced__c.field-meta.xml
<CustomField>
    <fullName>FreshBounced__c</fullName>
    <label>Fresh Bounced</label>
    <summarizedField>Weekly_Stats__c.FreshBounced__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>