TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FreshClicked__c.field-meta.xml
<CustomField>
    <fullName>FreshClicked__c</fullName>
    <label>Fresh Clicked</label>
    <summarizedField>Weekly_Stats__c.FreshClicked__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>