TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FreshEmail__c.field-meta.xml
<CustomField>
    <fullName>FreshEmail__c</fullName>
    <label>Fresh Email</label>
    <summarizedField>Weekly_Stats__c.FreshEmail__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>