TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FreshNegativeResponse__c.field-meta.xml
<CustomField>
    <fullName>FreshNegativeResponse__c</fullName>
    <label>Fresh Negative Response</label>
    <summarizedField>Weekly_Stats__c.FreshNegativeResponse__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>