TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FreshOpened__c.field-meta.xml
<CustomField>
    <fullName>FreshOpened__c</fullName>
    <description>sum of all FreshOpened records from Weekly Stats(child)</description>
    <label>Fresh Opened</label>
    <summarizedField>Weekly_Stats__c.FreshOpened__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>