TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FreshPositiveResponse__c.field-meta.xml
<CustomField>
    <fullName>FreshPositiveResponse__c</fullName>
    <label>Fresh Positive Response</label>
    <summarizedField>Weekly_Stats__c.FreshPositiveResponse__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>