TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FreshUnsubscribed__c.field-meta.xml
<CustomField>
    <fullName>FreshUnsubscribed__c</fullName>
    <label>Fresh Unsubscribed</label>
    <summarizedField>Weekly_Stats__c.FreshUnsubscribed__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>