TERP proj/force-app/main/default/objects/Monthly_Stats__c/fields/FreshWarmResponse__c.field-meta.xml
<CustomField>
    <fullName>FreshWarmResponse__c</fullName>
    <label>Fresh Warm Response</label>
    <summarizedField>Weekly_Stats__c.FreshWarmResponse__c</summarizedField>
    <summaryForeignKey>Weekly_Stats__c.MonthlyStats__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>